chore: prepare project for GitHub publication
- Add comprehensive documentation (README, CONTRIBUTING, DEPLOYMENT)
- Add GitHub Actions CI/CD workflows for automated testing and releases
- Add issue and pull request templates for standardized contributions
- Add security policy and code of conduct
- Add Docker support for containerized deployment
- Add EditorConfig for cross-platform editor consistency
- Add ESLint configuration for code quality
- Add .gitignore and .gitattributes for proper Git handling
- Add CHANGELOG for version history tracking
- Add project structure documentation
- Update .env.example with documented variables
- Add publication checklist and quick start guide

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-BOT_TOKEN=7788741747:AAFWFOscmOLNHcwO4vogCoASKcWvksUyTAU
-#MONGODB_URI=mongodb://localhost:27017/den_bot
+# Telegram Bot Token (required)
+BOT_TOKEN=your_bot_token_here
+
+# MongoDB Connection URI (optional)
+MONGODB_URI=mongodb://localhost:27017/den_bot
+
+# Environment
 NODE_ENV=development
